<resources>
    <string name="app_name">Donate Drop</string>

    <string name="signup_title">Create Account</string>
    <string name="signup_subtitle">Join DonateDrop and help save lives by donating blood.</string>
    <string name="label_full_name">Full Name</string>
    <string name="hint_full_name">Enter your full name</string>
    <string name="label_email">Email Address</string>
    <string name="hint_email">Enter your email address</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter a secure password</string>
    <string name="label_blood_group">Blood Group</string>
    <string name="hint_blood_group">Select your blood group</string>
    <string name="label_phone">Phone Number</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="agree_terms">I agree to the <u>Terms &amp; Conditions</u></string>
    <string name="terms_url">https://yourdomain.com/terms</string> <!-- adjust -->
    <string name="btn_sign_up">Sign Up</string>
    <string name="or_sign_up_with">or </string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string-array name="blood_groups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="instagram">"@donatedropapp"</string>
    <string name="title_blood_request">Blood Requests</string>
    <string name="hint_blood_type">Blood Type Needed</string>
    <string name="hint_quantity">Quantity Needed (Units)</string>
    <string name="hint_enter_units">Enter units needed</string>
    <string name="hint_urgency">Urgency Level</string>
    <string name="hint_hospital_address">Hospital Address</string>
    <string name="hint_enter_address">Enter hospital address</string>
    <string name="hint_receiver_name">Receiver’s Name</string>
    <string name="hint_enter_receiver_name">Enter receiver’s name</string>
    <string name="hint_contact_number">Receiver’s Contact Number</string>
    <string name="hint_enter_contact">Enter contact number</string>
    <string name="btn_submit_request">Submit Request</string>
    <!-- dropdown items -->
    <string-array name="blood_types_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="urgency_levels_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Critical</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="about_donatedrop">About</string>
    <string name="title_activity_admin">Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_users">Users</string>
    <string name="title_analytics">Analytics</string>
    <string name="hello_admin">Hello, </string>
</resources>