<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        >

        <!-- App Name -->
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/donate_red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/div"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvSignupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/tvSignupSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_subtitle"
            android:textSize="14sp"
            android:textColor="@color/gray_600"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvSignupTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Full Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:hint="@string/hint_full_name"
            app:hintEnabled="true"
            app:hintTextColor="@color/gray_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignupSubtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_email"
            app:hintEnabled="true"
            app:hintTextColor="@color/gray_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilFullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:hintEnabled="true"
            app:hintTextColor="@color/gray_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Blood Group Spinner -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBloodGroup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/label_blood_group"
            app:hintTextColor="@color/gray_light"
            app:endIconMode="dropdown_menu"
            android:visibility="visible"
            android:textSize="10sp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spinnerBloodGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="none"
                android:importantForAutofill="no"
                android:focusable="false"
                android:clickable="true"
                android:paddingStart="16dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_phone"
            app:hintEnabled="true"
            app:hintTextColor="@color/gray_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilBloodGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Gender Label -->
        <TextView
            android:id="@+id/tvGenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Gender"
            android:textSize="14sp"
            android:textColor="@color/gray_600"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/tilPhone"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Gender Toggle -->
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroupGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@id/tvGenderLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMale"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                app:icon="@drawable/ic_male"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFemale"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"
                app:icon="@drawable/ic_female"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOther"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/gender_other"
                app:icon="@drawable/ic_others"
                app:iconGravity="textStart" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!-- Terms & Conditions Checkbox -->
        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/agree_terms"
            app:layout_constraintTop_toBottomOf="@id/toggleGroupGender"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black" />

        <!-- Sign Up Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/btn_sign_up"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@id/cbTerms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="@color/donate_red"
            android:textColor="@color/white" />

        <!-- Separator -->
        <LinearLayout
            android:id="@+id/layoutSeparator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray_600" />

            <TextView
                android:id="@+id/tvOrSignupWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_up_with"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/gray_600"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray_600" />
        </LinearLayout>

        <!-- Google Sign-In -->


        <!-- Already have account -->
        <LinearLayout
            android:id="@+id/layoutSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@id/layoutSeparator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvAlreadyAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorrPrimaryDark"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/layoutSeparator"
            app:layout_constraintEnd_toEndOf="@+id/layoutSeparator"
            app:layout_constraintStart_toStartOf="@+id/layoutSeparator"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
