<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.donatedrop.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_requests"
            app:destination="@id/navigation_requests" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_history"
            app:destination="@id/navigation_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_requests"
        android:name="com.example.donatedrop.ui.requests.RequestsFragment"
        android:label="@string/title_blood_request"
        tools:layout="@layout/fragment_requests" >
        <action
            android:id="@+id/action_navigation_requests_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_requests_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_requests_to_navigation_home2"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_requests_to_navigation_history"
            app:destination="@id/navigation_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.donatedrop.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_history_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_history_to_navigation_requests"
            app:destination="@id/navigation_requests" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.donatedrop.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_requests"
            app:destination="@id/navigation_requests" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_history"
            app:destination="@id/navigation_history" />
    </fragment>


</navigation>